# serializer version: 1
# name: TestQuadXTrackingCostEqual.test_snapshot
  -0.00555
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.1
  0.00266
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.10
  -0.0
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.100
  0.00023
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.101
  -0.00053
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.102
  0.94202
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.103
  -2.33663
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.104
  -0.31173
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.105
  -0.8118
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.106
  0.74141
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.107
  0.55163
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.108
  0.85861
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.109
  0.81836
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.11
  0.0
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.110
  0.71307
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.111
  0.11754
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.112
  -0.99307
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.113
  1.01178
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.114
  -0.11731
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.115
  0.99254
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.116
  -0.06976
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.117
  1.00188
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.118
  False
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.119
  False
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.12
  0.96812
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.120
  dict({
    'collision': False,
    'env_complete': False,
    'out_of_bounds': False,
    'reference': array([ 0.11754, -0.99307,  1.01178]),
    'reference_error': array([-0.11731,  0.99254, -0.06976]),
    'state_of_interest': array([ 2.3000e-04, -5.3000e-04,  9.4202e-01]),
  })
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.121
  0.94212
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.122
  2.75294
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.123
  -0.63675
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.124
  -0.05273
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.125
  0.01608
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.126
  0.01503
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.127
  0.99837
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.128
  0.02558
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.129
  0.02577
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.13
  0.0
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.130
  0.75179
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.131
  0.00139
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.132
  0.00167
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.133
  0.95976
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.134
  0.90393
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.135
  2.02797
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.136
  -0.35554
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.137
  0.18179
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.138
  0.12791
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.139
  0.14535
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.14
  0.0
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.140
  0.26022
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.141
  0.42273
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.142
  0.15643
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.143
  -0.98769
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.144
  1.0157
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.145
  -0.15504
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.146
  0.98936
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.147
  -0.05594
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.148
  1.003
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.149
  False
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.15
  0.0
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.150
  False
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.151
  dict({
    'collision': False,
    'env_complete': False,
    'out_of_bounds': False,
    'reference': array([ 0.15643, -0.98769,  1.0157 ]),
    'reference_error': array([-0.15504,  0.98936, -0.05594]),
    'state_of_interest': array([0.00139, 0.00167, 0.95976]),
  })
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.152
  1.67852
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.153
  -4.76884
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.154
  3.17506
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.155
  -0.03843
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.156
  0.00852
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.157
  0.03291
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.158
  0.99868
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.159
  0.05795
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.16
  0.0
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.160
  0.07284
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.161
  0.9101
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.162
  0.0028
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.163
  0.00484
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.164
  0.97977
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.165
  0.34297
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.166
  -2.74062
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.167
  2.05857
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.168
  0.50533
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.169
  0.52001
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.17
  0.05045
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.170
  0.33395
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.171
  0.5919
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.172
  0.52366
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.173
  0.19509
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.174
  -0.98079
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.175
  1.01961
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.176
  -0.19229
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.177
  0.98562
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.178
  -0.03984
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.179
  1.005
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.18
  0.05113
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.180
  False
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.181
  False
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.182
  dict({
    'collision': False,
    'env_complete': False,
    'out_of_bounds': False,
    'reference': array([ 0.19509, -0.98079,  1.01961]),
    'reference_error': array([-0.19229,  0.98562, -0.03984]),
    'state_of_interest': array([0.0028 , 0.00484, 0.97977]),
  })
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.19
  0.04893
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.2
  0.00149
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.20
  0.04915
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.21
  0.0
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.22
  -1.0
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.23
  1.0
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.24
  -0.0
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.25
  1.0
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.26
  -0.03188
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.27
  dict({
    'collision': False,
    'env_complete': False,
    'out_of_bounds': False,
    'reference': array([ 0., -1.,  1.]),
    'reference_error': array([-0.     ,  1.     , -0.03188]),
    'state_of_interest': array([-0.     ,  0.     ,  0.96812]),
  })
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.28
  2.73504
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.29
  -1.15221
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.3
  -0.0001
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.30
  3.00689
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.31
  0.01653
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.32
  -0.00778
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.33
  0.01673
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.34
  0.99969
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.35
  -0.0119
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.36
  -0.02399
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.37
  -0.68644
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.38
  -0.0
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.39
  -1e-05
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.4
  -1e-05
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.40
  0.94883
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.41
  1.72132
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.42
  -0.38404
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.43
  2.25314
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.44
  0.55789
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.45
  0.41526
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.46
  0.47202
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.47
  0.61763
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.48
  0.61109
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.49
  0.03926
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.5
  2e-05
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.50
  -0.99923
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.51
  1.00393
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.52
  -0.03926
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.53
  0.99922
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.54
  -0.0551
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.55
  1.00151
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.56
  False
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.57
  False
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.58
  dict({
    'collision': False,
    'env_complete': False,
    'out_of_bounds': False,
    'reference': array([ 0.03926, -0.99923,  1.00393]),
    'reference_error': array([-0.03926,  0.99922, -0.0551 ]),
    'state_of_interest': array([-0.0000e+00, -1.0000e-05,  9.4883e-01]),
  })
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.59
  -6.33473
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.6
  1.0
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.60
  4.77533
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.61
  1.22051
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.62
  -0.0106
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.63
  0.02128
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.64
  0.05135
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.65
  0.9984
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.66
  -0.00183
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.67
  -0.02386
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.68
  -0.21796
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.69
  -0.00016
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.7
  -1e-05
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.70
  -0.00041
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.71
  0.93796
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.72
  -2.54986
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.73
  2.98842
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.74
  1.64079
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.75
  0.62885
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.76
  0.74243
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.77
  0.74297
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.78
  0.54396
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.79
  0.49873
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.8
  0.00015
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.80
  0.07846
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.81
  -0.99692
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.82
  1.00785
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.83
  -0.07861
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.84
  0.9965
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.85
  -0.06989
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.86
  1.00204
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.87
  False
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.88
  False
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.89
  dict({
    'collision': False,
    'env_complete': False,
    'out_of_bounds': False,
    'reference': array([ 0.07846, -0.99692,  1.00785]),
    'reference_error': array([-0.07861,  0.9965 , -0.06989]),
    'state_of_interest': array([-1.6000e-04, -4.1000e-04,  9.3796e-01]),
  })
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.9
  -0.76352
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.90
  -1.1477
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.91
  -3.19485
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.92
  -2.65752
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.93
  -0.07008
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.94
  0.01255
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.95
  0.03552
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.96
  0.99683
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.97
  0.02613
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.98
  -0.03319
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.99
  0.47257
# ---
